# reasoning_navigation_pointout

./: README.md  requirements.txt
demo/: original.prproj
rearrange_ws/: decision_tree_model.joblib  feature_order.txt
rearrange_ws/devel/: .catkin
rearrange_ws/devel/include/rearrange/: GetSceneObjectList.h  GetSceneObjectListRequest.h  GetSceneObjectListResponse.h  NavigateDrinkAction.h  NavigateDrinkActionFeedback.h  NavigateDrinkActionGoal.h  NavigateDrinkActionResult.h  NavigateDrinkFeedback.h  NavigateDrinkGoal.h  NavigateDrinkResult.h  SetInitTiagoPose.h  SetInitTiagoPoseRequest.h  SetInitTiagoPoseResponse.h  UpdateObjectList.h  UpdateObjectListRequest.h  UpdateObjectListResponse.h
rearrange_ws/devel/include/world_percept_assig3/: GetSceneObjectList.h  GetSceneObjectListRequest.h  GetSceneObjectListResponse.h  GoToObject.h  GoToObjectRequest.h  GoToObjectResponse.h  LoadKnowledge.h  LoadKnowledgeRequest.h  LoadKnowledgeResponse.h  ProcessObject.h  ProcessObjectRequest.h  ProcessObjectResponse.h  SendGoal.h  SendGoalRequest.h  SendGoalResponse.h  SetInitTiagoPose.h  SetInitTiagoPoseRequest.h  SetInitTiagoPoseResponse.h  UpdateObjectList.h  UpdateObjectListRequest.h  UpdateObjectListResponse.h
rearrange_ws/devel/lib/pkgconfig/: rearrange.pc  world_percept_assig3.pc
rearrange_ws/devel/lib/rearrange/: direct_percept_node  map_generator_node  percept_node
rearrange_ws/devel/lib/world_percept_assig3/: direct_percept_node  map_generator_node  object_list_node.py  percept_node
rearrange_ws/devel/rearrange/: rearrange.owl
rearrange_ws/devel/rearrange/msg/: NavigateDrinkAction.owl  NavigateDrinkActionFeedback.owl  NavigateDrinkActionGoal.owl  NavigateDrinkActionResult.owl  NavigateDrinkFeedback.owl  NavigateDrinkGoal.owl  NavigateDrinkResult.owl
rearrange_ws/devel/rearrange/srv/: GetSceneObjectList.owl  SetInitTiagoPose.owl  UpdateObjectList.owl
rearrange_ws/devel/share/rearrange/cmake/: rearrange-msg-extras.cmake  rearrange-msg-paths.cmake  rearrangeConfig.cmake
rearrange_ws/devel/share/rearrange/msg/: NavigateDrinkAction.msg  NavigateDrinkActionFeedback.msg  NavigateDrinkActionGoal.msg  NavigateDrinkActionResult.msg  NavigateDrinkFeedback.msg  NavigateDrinkGoal.msg  (+1 more)
rearrange_ws/devel/world_percept_assig3/: world_percept_assig3.owl
rearrange_ws/devel/world_percept_assig3/srv/: GetSceneObjectList.owl  GoToObject.owl  LoadKnowledge.owl  ProcessObject.owl  SendGoal.owl  SetInitTiagoPose.owl  UpdateObjectList.owl
rearrange_ws/src/: feature_order.txt
rearrange_ws/src/pointout/world_percept_assig3/: CMakeLists.txt  README.md  package.xml
rearrange_ws/src/pointout/world_percept_assig3/config/: loadKnowledge.yaml
rearrange_ws/src/pointout/world_percept_assig3/launch/: gazebo_ssy236.launch  reasoning.launch
rearrange_ws/src/pointout/world_percept_assig3/owl/: ssy236Ontology.owl
rearrange_ws/src/pointout/world_percept_assig3/prolog/: init.pl  instance_utils.pl
rearrange_ws/src/pointout/world_percept_assig3/queries/: savedQueries.txt
rearrange_ws/src/pointout/world_percept_assig3/scripts/: command.txt  goal_topic_test.py  read_text_file.py
rearrange_ws/src/pointout/world_percept_assig3/src/: knowledge_node.cpp  map_generator_node.cpp  percept_node.cpp  reasoning_node.cpp  tiago_control_node.cpp  tiago_moveit_node.cpp
rearrange_ws/src/pointout/world_percept_assig3/srv/: GetSceneObjectList.srv
rearrange_ws/src/pointout/world_percept_assig3/test/: decision_tree.py  decision_tree_model.joblib  feature_order.txt  test.py
rearrange_ws/src/pointout/world_percept_assig3/worlds/: tst3.world
rearrange_ws/src/rearrange/: CMakeLists.txt  README.md  package.xml
rearrange_ws/src/rearrange/action/: NavigateDrink.action
rearrange_ws/src/rearrange/launch/: reasoning.launch
rearrange_ws/src/rearrange/msg/: Drink.msg
rearrange_ws/src/rearrange/owl/: objects_ontology.owl  objects_ontology.rdf
rearrange_ws/src/rearrange/prolog/: init.pl  instance_utils.pl
rearrange_ws/src/rearrange/queries/: object_pose.json
rearrange_ws/src/rearrange/scripts/: decision_tree.py  interface.py  navigation_node.py  object_list_node.py
rearrange_ws/src/rearrange/src/: map_generator_node.cpp  percept_node.cpp
rearrange_ws/src/rearrange/srv/: GetSceneObjectList.srv  UpdateObjectList.srv
rearrange_ws/src/rearrange/worlds/: small_office.world
rearrange_ws/src/world_percept_assig3/: CMakeLists.txt  README.md  package.xml
rearrange_ws/src/world_percept_assig3/config/: loadKnowledge.yaml
rearrange_ws/src/world_percept_assig3/launch/: gazebo_ssy236.launch  reasoning.launch  tiago_navigation.launch
rearrange_ws/src/world_percept_assig3/owl/: objects_ontology.owl  objects_ontology.rdf
rearrange_ws/src/world_percept_assig3/prolog/: init.pl  instance_utils.pl
rearrange_ws/src/world_percept_assig3/queries/: object_pose.json  savedQueries.txt
rearrange_ws/src/world_percept_assig3/scripts/: auto.py  decision_tree.py  decision_tree_model.joblib  goal_topic_node.py  interface.py  navigation_node.py  object_list_node.py  text_file_reader_node.py
rearrange_ws/src/world_percept_assig3/src/: direct_percept_node.cpp  map_generator_node.cpp  percept_node.cpp
rearrange_ws/src/world_percept_assig3/srv/: GetSceneObjectList.srv  GoToObject.srv  LoadKnowledge.srv  ProcessObject.srv  SendGoal.srv  SetInitTiagoPose.srv
rearrange_ws/src/world_percept_assig3/worlds/: kitchen_chalmers.world
(+101 files in other folders)
