<?xml version="1.0"?>
<package format="2">
  <name>world_percept_assig3</name>
  <version>0.0.0</version>
  <description>The world_percept_assig3 package</description>

  <maintainer email="karinne@chalmers.se">root</maintainer>
  <license>TODO</license> <!-- 请记得更新许可证信息 -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 添加 MoveIt! 依赖项 -->
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <!-- 已有的依赖项 -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosprolog</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>message_runtime</build_depend>

  <!-- MoveIt! 导出依赖项 -->
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>

  <!-- 已有的导出依赖项 -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>rosprolog</build_export_depend>
  <build_export_depend>eigen3</build_export_depend>

  <!-- MoveIt! 执行依赖项 -->
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <!-- 已有的执行依赖项 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosprolog</exec_depend>

  <export>
  </export>
</package>
